# scarecrow-gear-academy

./: Cargo.toml
01-tamagotchi/: Cargo.toml
01-tamagotchi/io/: Cargo.toml
01-tamagotchi/io/src/: lib.rs
01-tamagotchi/src/: lib.rs
01-tamagotchi/tests/: smoke.rs
