[package]
name = "tmg1"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
tmg1_io.workspace = true

[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
tmg1_io.workspace = true

[dev-dependencies]
gtest.workspace = true
